# second-brain-open-kg

./: .gitignore  IDEA.md  Makefile  ONTOLOGY.md  PLAN.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.sh
.claude/skills/analyze/: SKILL.md
.claude/skills/briefing/: SKILL.md
.claude/skills/communities/: SKILL.md
.claude/skills/hidden/: SKILL.md
.claude/skills/ingest/: SKILL.md
.claude/skills/ingest-folder/: SKILL.md
.claude/skills/search/: SKILL.md
.claude/skills/tools/: ladybug-rag.md  ladybug.md  networkx.md  ripser.md
.claude/skills/validate/: SKILL.md
config/: edge_types.json
docs/: hardening.md  privacy-guide.md
eval/: retrieval_eval.py
eval/multipass/: MEMPALACE_ISSUE.md  export_palace.py  index.html
scripts/: daily_briefing.py  enrich.py  health_check.py  ingest_folder.py  ingest_obsidian.py  onboard.py  run_analysis.py  search_cli.py  status.py  validate_ontology.py
second_brain/: __init__.py  briefing.py  check.py  chunk_store.py  community_summaries.py  config.py  dashboard.py  embed.py  extract.py  graph.py  hidden_connections.py  mcp_server.py  migrations.py  obsidian.py  ontology.py  path_finder.py  queries.py  topology.py
static/: index.html
systemd/: open-second-brain-enrich.service  open-second-brain-enrich.timer  open-second-brain-health.service  open-second-brain-health.timer
tests/: conftest.py  smoke.sh  test_extract.py  test_graph.py  test_obsidian.py  test_ontology.py  test_pipeline.py  test_topology.py
