[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-second-brain"
version = "0.1.0"
description = "Personal knowledge graph for your Obsidian vault"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ben West", email = "ben@benwest.blog" },
]
keywords = ["knowledge-graph", "obsidian", "second-brain", "ladybugdb", "graph-rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "real_ladybug>=0.15.0",
    "pyarrow>=15.0.0",
    "pandas>=2.0.0",
    "spacy>=3.7.0",
    "networkx>=3.2",
    "ollama>=0.3.0",
]

[project.optional-dependencies]
dashboard = ["fastapi>=0.110.0", "uvicorn[standard]>=0.27.0"]
mcp = ["mcp>=1.0.0"]
topology = ["ripser>=0.6.0"]
dev = ["pytest>=8.0", "pytest-mock", "pytest-timeout", "ruff"]

[project.scripts]
sb-ingest = "scripts.ingest_obsidian:main"
sb-search = "scripts.search_cli:main"
sb-analyze = "scripts.run_analysis:main"
sb-briefing = "scripts.daily_briefing:main"
sb-validate = "scripts.validate_ontology:main"
sb-status = "scripts.status:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30

[tool.ruff]
target-version = "py310"
line-length = 100
